# gfal2-python

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.md  RELEASE-NOTES  SConstruct  VERSION  package_generator.sh  readme.html  setup.py
ci/: common-rpm-build.sh  fedora-packages.sh  write-repo-file.sh
ci/repo/: dmc-gitlabci-el8.repo
cmake/modules/: FindGLIB2.cmake  FindGfal2.cmake  FindPythonEasy.cmake  MacroAddepydoc.cmake
doc/: CMakeLists.txt  epydoc_config.in
doc/src/: example.c
example/python/: gfal2_bring_online.py  gfal2_bulk_bring_online.py  gfal2_bulk_copy.py  gfal2_copy.py  gfal2_copy_multiple_cred.py  gfal2_get_turls.py  gfal2_long_listing.py  gfal2_python_listdir.py  gfal2_python_read.py  gfal2_qos_api.py  gfal2_recursive_ls.py  gfal2_simple_listing.py  gfal2_test_qos.py
packaging/: Makefile  build-debian.sh  gfal2-repo-manager.py
packaging/debian/: changelog  control  copyright  gfal2-python-doc.install  gfal2-python.docs  gfal2-python.install  gfal2-python3.install  rules
packaging/rpm/: gfal2-python.spec
packaging/rpm/specs/: gfal2-bindings.spec  gfal2-python.spec
packaging/rpm/specs-alt-python/: gfal2-python.spec
src/: CMakeLists.txt  Cred.h  Directory.cpp  Directory.h  Dirent.h  File.cpp  File.h  GErrorWrapper.cpp  GErrorWrapper.h  Gfal2Context.cpp  Gfal2Context.h  GfaltParams.cpp  GfaltParams.h  LoggingHelper.cpp  LoggingHelper.h  SConscript  Stat.h  gerror_exception.cpp  gerror_exception.h  gfal2.cpp  gfal_boost_include.hpp  gfal_dirent.cpp  gfal_python.cpp  gfal_stat.cpp  gfal_stat.h  gfalcpp.cpp  gfalcpp.h  gfalfile.cpp  gfalfile.h  gfalt_params.cpp  gfalt_params.h  pyGIL.h
src/boost/python/object/src/: exec.cpp
src/boost/python/object/src/converter/: registry.cpp
src/boost/python/object/src/object/: function.cpp  function_doc_signature.cpp
test/: CMakeLists.txt
test/bench/: test-gfal-threaded.py
test/functional/: CMakeLists.txt  setup_env_test.sh  test_gfal2_copy.py  test_gfal2_link.py  test_gfal2_listdir.py  test_gfal2_lstat.py  test_gfal2_rename.py  test_gfal2_xattr.py
test/functionals/: CMakeLists.txt  exec_tests.sh  python_test_lib.py  setup_env_test.sh  test-gfal2-all.py  test_gfal2_link.py  test_gfal2_listdir.py  test_gfal2_lstat.py  test_gfal2_mkrmdir.py  test_gfal2_open.py  test_gfal2_qos.py  test_gfal2_rename.py  test_gfal2_stat.py  test_gfal2_unlink.py  test_gfal2_xattr.py
test/unit/: CMakeLists.txt  creat_instance_all.py  unit_test_container.sh
trunk/: CMakeLists.txt  RELEASE-NOTES
trunk/doc/: CMakeLists.txt  Doxyfile  epydoc_config.in
trunk/example/python/: gfal2_python_read.py  gfal2_python_read.pyo
trunk/src/: CMakeLists.txt  gerror_exception.h  gfal_boost_include.hpp  gfal_stat.h  gfalcpp.cpp  gfalfile.cpp
trunk/test/bench/: test-gfal-threaded.py
trunk/test/functionals/: python_test_lib.py  setup_env_test.sh  test_gfal2_link.py  test_gfal2_listdir.py  test_gfal2_stat.py
